tests/error/func_arg_array_empty.gw
function int[] my_func(int i[2]){}
